# GooseAlphaZero

./: README.md  UV_GETTING_STARTED.md  environment.yml  environment_windows.yml  get-uvx-command.sh  pyproject.toml
alphazero-mcp/: README.md  pyproject.toml
alphazero-mcp/src/alphazero_mcp/: __main__.py  server.py
alphazero-student/: README.md  alpha_zero_tutor_recipe.yaml
alphazero-student/tools/: .alphazero_user  choose_alias.py  continue_next.py  mcp_bridge.py  register_user.py  start_or_continue.py  user_session.py  write_alias.py
images/: README.md
