[project]
name = "goose-alpha-zero-workspace"
version = "0.1.0"
description = "AlphaZero Development Tutor - Workspace Root"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.12.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv.workspace]
members = ["alphazero-mcp"]

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
