[project]
name = "alphazero-mcp"
version = "0.1.0"
description = "MCP Server for AlphaZero Reinforcement Learning Tutor"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "mcp[cli]>=1.2.0",
  "requests>=2.32.3",
]

[project.scripts]
alphazero-mcp = "alphazero_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
